sql2amn/output/SQL2AMN/parser/PlPgSQL.g4
grammar PlPgSQL;

// ===== ПРАВИЛА ПАРСЕРА =====

program
    : statement+ EOF
    ;

statement
    : createTableStatement
    | createFunctionStatement
    ;

createTableStatement
    : CREATE TABLE schemaName DOT tableName
      LPAREN columnDef (COMMA columnDef)* COMMA? constraintDef? RPAREN SEMI
    ;

columnDef
    : IDENTIFIER dataType columnConstraint*
    ;

columnConstraint
    : NOT NULL_
    | GENERATED BY DEFAULT AS IDENTITY
    | PRIMARY KEY
    ;

constraintDef
    : CONSTRAINT IDENTIFIER PRIMARY KEY LPAREN IDENTIFIER RPAREN
    ;

dataType
    : BIGINT
    | VARCHAR
    | RECORD
    | IDENTIFIER
    ;

createFunctionStatement
    : CREATE (OR REPLACE)? FUNCTION schemaName DOT functionName
      LPAREN RPAREN RETURNS VOID AS DOLLAR DOLLAR
      declareBlock?
      BEGIN
      plStatement+
      END SEMI
      DOLLAR DOLLAR LANGUAGE PLPGSQL SEMI
    ;

declareBlock
    : DECLARE variableDeclaration+
    ;

variableDeclaration
    : IDENTIFIER dataType SEMI
    ;

plStatement
    : forLoopStatement
    | ifStatement
    | insertStatement
    | selectIntoStatement
    | assignmentStatement
    ;

forLoopStatement
    : FOR IDENTIFIER IN LPAREN SELECT STAR FROM schemaName DOT tableName RPAREN
      LOOP plStatement+ END LOOP SEMI
    ;

ifStatement
    : IF condition THEN plStatement+
      (ELSE plStatement+)?
      END IF SEMI
    ;

insertStatement
    : INSERT INTO schemaName DOT tableName
      LPAREN IDENTIFIER (COMMA IDENTIFIER)* RPAREN
      VALUES LPAREN expression (COMMA expression)* RPAREN SEMI
    ;

selectIntoStatement
    : SELECT IDENTIFIER INTO IDENTIFIER
      FROM schemaName DOT tableName
      WHERE condition SEMI
    ;

assignmentStatement
    : IDENTIFIER ASSIGN expression SEMI
    ;

condition
    : expression IS NULL_              # isNullCondition
    | expression IS NOT NULL_          # isNotNullCondition  
    | expression EQ expression         # eqCondition
    | expression AND expression        # andCondition
    ;

// Выражение
expression
    : IDENTIFIER DOT IDENTIFIER       # fieldAccess
    | IDENTIFIER                      # varRef
    | STRING_LITERAL                  # literal
    | INTEGER_LITERAL                 # intLiteral
    ;

schemaName : IDENTIFIER ;
tableName  : IDENTIFIER ;
functionName : IDENTIFIER ;

// ===== ЛЕКСЕР (токены) =====

CREATE      : [Cc][Rr][Ee][Aa][Tt][Ee] ;
TABLE       : [Tt][Aa][Bb][Ll][Ee] ;
OR          : [Oo][Rr] ;
REPLACE     : [Rr][Ee][Pp][Ll][Aa][Cc][Ee] ;
FUNCTION    : [Ff][Uu][Nn][Cc][Tt][Ii][Oo][Nn] ;
RETURNS     : [Rr][Ee][Tt][Uu][Rr][Nn][Ss] ;
VOID        : [Vv][Oo][Ii][Dd] ;
LANGUAGE    : [Ll][Aa][Nn][Gg][Uu][Aa][Gg][Ee] ;
PLPGSQL     : [Pp][Ll][Pp][Gg][Ss][Qq][Ll] ;
BEGIN       : [Bb][Ee][Gg][Ii][Nn] ;
END         : [Ee][Nn][Dd] ;
DECLARE     : [Dd][Ee][Cc][Ll][Aa][Rr][Ee] ;
FOR         : [Ff][Oo][Rr] ;
IN          : [Ii][Nn] ;
SELECT      : [Ss][Ee][Ll][Ee][Cc][Tt] ;
FROM        : [Ff][Rr][Oo][Mm] ;
LOOP        : [Ll][Oo][Oo][Pp] ;
INSERT      : [Ii][Nn][Ss][Ee][Rr][Tt] ;
INTO        : [Ii][Nn][Tt][Oo] ;
VALUES      : [Vv][Aa][Ll][Uu][Ee][Ss] ;
WHERE       : [Ww][Hh][Ee][Rr][Ee] ;
IF          : [Ii][Ff] ;
THEN        : [Tt][Hh][Ee][Nn] ;
ELSE        : [Ee][Ll][Ss][Ee] ;
IS          : [Ii][Ss] ;
NULL_       : [Nn][Uu][Ll][Ll] ;
AND         : [Aa][Nn][Dd] ;
NOT         : [Nn][Oo][Tt] ;
PRIMARY     : [Pp][Rr][Ii][Mm][Aa][Rr][Yy] ;
KEY         : [Kk][Ee][Yy] ;
CONSTRAINT  : [Cc][Oo][Nn][Ss][Tt][Rr][Aa][Ii][Nn][Tt] ;
GENERATED   : [Gg][Ee][Nn][Ee][Rr][Aa][Tt][Ee][Dd] ;
BY          : [Bb][Yy] ;
DEFAULT     : [Dd][Ee][Ff][Aa][Uu][Ll][Tt] ;
AS          : [Aa][Ss] ;
IDENTITY    : [Ii][Dd][Ee][Nn][Tt][Ii][Tt][Yy] ;
BIGINT      : [Bb][Ii][Gg][Ii][Nn][Tt] ;
VARCHAR     : [Vv][Aa][Rr][Cc][Hh][Aa][Rr] ;
STAR        : '*' ;
RECORD      : [Rr][Ee][Cc][Oo][Rr][Dd] ;

LPAREN      : '(' ;
RPAREN      : ')' ;
SEMI        : ';' ;
COMMA       : ',' ;
DOT         : '.' ;
EQ          : '=' ;
ASSIGN      : ':=' ;
DOLLAR      : '$$' ;

STRING_LITERAL  : '\'' (~'\'')* '\'' ;
INTEGER_LITERAL : [0-9]+ ;
IDENTIFIER      : [a-zA-Z_][a-zA-Z_0-9]* ;

WS          : [ \t\r\n]+ -> skip ;
COMMENT     : '--' ~[\r\n]* -> skip ;
BLOCK_COMMENT: '/*' .*? '*/' -> skip ;
