sql2amn/src/SQL2AMN/parser/PlPgSQLParser.java
// Generated from PlPgSQL.g4 by ANTLR 4.13.1
package SQL2AMN.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PlPgSQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CREATE=1, TABLE=2, OR=3, REPLACE=4, FUNCTION=5, RETURNS=6, VOID=7, LANGUAGE=8, 
		PLPGSQL=9, BEGIN=10, END=11, DECLARE=12, FOR=13, IN=14, SELECT=15, FROM=16, 
		LOOP=17, INSERT=18, INTO=19, VALUES=20, WHERE=21, IF=22, THEN=23, ELSE=24, 
		IS=25, NULL_=26, AND=27, NOT=28, PRIMARY=29, KEY=30, CONSTRAINT=31, GENERATED=32, 
		BY=33, DEFAULT=34, AS=35, IDENTITY=36, BIGINT=37, VARCHAR=38, STAR=39, 
		RECORD=40, LPAREN=41, RPAREN=42, SEMI=43, COMMA=44, DOT=45, EQ=46, ASSIGN=47, 
		DOLLAR=48, STRING_LITERAL=49, INTEGER_LITERAL=50, IDENTIFIER=51, WS=52, 
		COMMENT=53, BLOCK_COMMENT=54;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_createTableStatement = 2, RULE_columnDef = 3, 
		RULE_constraintDef = 4, RULE_dataType = 5, RULE_createFunctionStatement = 6, 
		RULE_declareBlock = 7, RULE_variableDeclaration = 8, RULE_plStatement = 9, 
		RULE_forLoopStatement = 10, RULE_ifStatement = 11, RULE_insertStatement = 12, 
		RULE_selectIntoStatement = 13, RULE_assignmentStatement = 14, RULE_condition = 15, 
		RULE_expression = 16, RULE_schemaName = 17, RULE_tableName = 18, RULE_functionName = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "createTableStatement", "columnDef", "constraintDef", 
			"dataType", "createFunctionStatement", "declareBlock", "variableDeclaration", 
			"plStatement", "forLoopStatement", "ifStatement", "insertStatement", 
			"selectIntoStatement", "assignmentStatement", "condition", "expression", 
			"schemaName", "tableName", "functionName"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "'*'", null, "'('", "')'", "';'", "','", "'.'", "'='", 
			"':='", "'$$'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CREATE", "TABLE", "OR", "REPLACE", "FUNCTION", "RETURNS", "VOID", 
			"LANGUAGE", "PLPGSQL", "BEGIN", "END", "DECLARE", "FOR", "IN", "SELECT", 
			"FROM", "LOOP", "INSERT", "INTO", "VALUES", "WHERE", "IF", "THEN", "ELSE", 
			"IS", "NULL_", "AND", "NOT", "PRIMARY", "KEY", "CONSTRAINT", "GENERATED", 
			"BY", "DEFAULT", "AS", "IDENTITY", "BIGINT", "VARCHAR", "STAR", "RECORD", 
			"LPAREN", "RPAREN", "SEMI", "COMMA", "DOT", "EQ", "ASSIGN", "DOLLAR", 
			"STRING_LITERAL", "INTEGER_LITERAL", "IDENTIFIER", "WS", "COMMENT", "BLOCK_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PlPgSQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PlPgSQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PlPgSQLParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlPgSQLListener ) ((PlPgSQLListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlPgSQLListener ) ((PlPgSQLListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(40);
				statement();
				}
				}
				setState(43); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CREATE );
			setState(45);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public CreateTableStatementContext createTableStatement() {
			return getRuleContext(CreateTableStatementContext.class,0);
		}
		public CreateFunctionStatementContext createFunctionStatement() {
			return getRuleContext(CreateFunctionStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlPgSQLListener ) ((PlPgSQLListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlPgSQLListener ) ((PlPgSQLListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(49);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(47);
				createTableStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(48);
				createFunctionStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CreateTableStatementContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(PlPgSQLParser.CREATE, 0); }
		public TerminalNode TABLE() { return getToken(PlPgSQLParser.TABLE, 0); }
		public SchemaNameContext schemaName() {
			return getRuleContext(SchemaNameContext.class,0);
		}
		public TerminalNode DOT() { return getToken(PlPgSQLParser.DOT, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(PlPgSQLParser.LPAREN, 0); }
		public List<ColumnDefContext> columnDef() {
			return getRuleContexts(ColumnDefContext.class);
		}
		public ColumnDefContext columnDef(int i) {
			return getRuleContext(ColumnDefContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(PlPgSQLParser.RPAREN, 0); }
		public TerminalNode SEMI() { return getToken(PlPgSQLParser.SEMI, 0); }
		public List<TerminalNode> COMMA() { return getTokens(PlPgSQLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PlPgSQLParser.COMMA, i);
		}
		public ConstraintDefContext constraintDef() {
			return getRuleContext(ConstraintDefContext.class,0);
		}
		public CreateTableStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createTableStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlPgSQLListener ) ((PlPgSQLListener)listener).enterCreateTableStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlPgSQLListener ) ((PlPgSQLListener)listener).exitCreateTableStatement(this);
		}
	}

	public final CreateTableStatementContext createTableStatement() throws RecognitionException {
		CreateTableStatementContext _localctx = new CreateTableStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_createTableStatement);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(CREATE);
			setState(52);
			match(TABLE);
			setState(53);
			schemaName();
			setState(54);
			match(DOT);
			setState(55);
			tableName();
			setState(56);
			match(LPAREN);
			setState(57);
			columnDef();
			setState(62);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(58);
					match(COMMA);
					setState(59);
					columnDef();
					}
					} 
				}
				setState(64);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(65);
				match(COMMA);
				}
			}

			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CONSTRAINT) {
				{
				setState(68);
				constraintDef();
				}
			}

			setState(71);
			match(RPAREN);
			setState(72);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ColumnDefContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(PlPgSQLParser.IDENTIFIER, 0); }
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public TerminalNode NOT() { return getToken(PlPgSQLParser.NOT, 0); }
		public TerminalNode NULL_() { return getToken(PlPgSQLParser.NULL_, 0); }
		public TerminalNode GENERATED() { return getToken(PlPgSQLParser.GENERATED, 0); }
		public TerminalNode BY() { return getToken(PlPgSQLParser.BY, 0); }
		public TerminalNode DEFAULT() { return getToken(PlPgSQLParser.DEFAULT, 0); }
		public TerminalNode AS() { return getToken(PlPgSQLParser.AS, 0); }
		public TerminalNode IDENTITY() { return getToken(PlPgSQLParser.IDENTITY, 0); }
		public ColumnDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_columnDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlPgSQLListener ) ((PlPgSQLListener)listener).enterColumnDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlPgSQLListener ) ((PlPgSQLListener)listener).exitColumnDef(this);
		}
	}

	public final ColumnDefContext columnDef() throws RecognitionException {
		ColumnDefContext _localctx = new ColumnDefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_columnDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(IDENTIFIER);
			setState(75);
			dataType();
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NOT) {
				{
				setState(76);
				match(NOT);
				setState(77);
				match(NULL_);
				}
			}

			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GENERATED) {
				{
				setState(80);
				match(GENERATED);
				setState(81);
				match(BY);
				setState(82);
				match(DEFAULT);
				setState(83);
				match(AS);
				setState(84);
				match(IDENTITY);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstraintDefContext extends ParserRuleContext {
		public TerminalNode CONSTRAINT() { return getToken(PlPgSQLParser.CONSTRAINT, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(PlPgSQLParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(PlPgSQLParser.IDENTIFIER, i);
		}
		public TerminalNode PRIMARY() { return getToken(PlPgSQLParser.PRIMARY, 0); }
		public TerminalNode KEY() { return getToken(PlPgSQLParser.KEY, 0); }
		public TerminalNode LPAREN() { return getToken(PlPgSQLParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(PlPgSQLParser.RPAREN, 0); }
		public ConstraintDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constraintDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlPgSQLListener ) ((PlPgSQLListener)listener).enterConstraintDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlPgSQLListener ) ((PlPgSQLListener)listener).exitConstraintDef(this);
		}
	}

	public final ConstraintDefContext constraintDef() throws RecognitionException {
		ConstraintDefContext _localctx = new ConstraintDefContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_constraintDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(CONSTRAINT);
			setState(88);
			match(IDENTIFIER);
			setState(89);
			match(PRIMARY);
			setState(90);
			match(KEY);
			setState(91);
			match(LPAREN);
			setState(92);
			match(IDENTIFIER);
			setState(93);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DataTypeContext extends ParserRuleContext {
		public TerminalNode BIGINT() { return getToken(PlPgSQLParser.BIGINT, 0); }
		public TerminalNode VARCHAR() { return getToken(PlPgSQLParser.VARCHAR, 0); }
		public TerminalNode IDENTIFIER() { return getToken(PlPgSQLParser.IDENTIFIER, 0); }
		public DataTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlPgSQLListener ) ((PlPgSQLListener)listener).enterDataType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlPgSQLListener ) ((PlPgSQLListener)listener).exitDataType(this);
		}
	}

	public final DataTypeContext dataType() throws RecognitionException {
		DataTypeContext _localctx = new DataTypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dataType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 2252212130545664L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CreateFunctionStatementContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(PlPgSQLParser.CREATE, 0); }
		public TerminalNode FUNCTION() { return getToken(PlPgSQLParser.FUNCTION, 0); }
		public SchemaNameContext schemaName() {
			return getRuleContext(SchemaNameContext.class,0);
		}
		public TerminalNode DOT() { return getToken(PlPgSQLParser.DOT, 0); }
		public FunctionNameContext functionName() {
			return getRuleContext(FunctionNameContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(PlPgSQLParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(PlPgSQLParser.RPAREN, 0); }
		public TerminalNode RETURNS() { return getToken(PlPgSQLParser.RETURNS, 0); }
		public TerminalNode VOID() { return getToken(PlPgSQLParser.VOID, 0); }
		public TerminalNode AS() { return getToken(PlPgSQLParser.AS, 0); }
		public List<TerminalNode> DOLLAR() { return getTokens(PlPgSQLParser.DOLLAR); }
		public TerminalNode DOLLAR(int i) {
			return getToken(PlPgSQLParser.DOLLAR, i);
		}
		public TerminalNode BEGIN() { return getToken(PlPgSQLParser.BEGIN, 0); }
		public TerminalNode END() { return getToken(PlPgSQLParser.END, 0); }
		public List<TerminalNode> SEMI() { return getTokens(PlPgSQLParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(PlPgSQLParser.SEMI, i);
		}
		public TerminalNode LANGUAGE() { return getToken(PlPgSQLParser.LANGUAGE, 0); }
		public TerminalNode PLPGSQL() { return getToken(PlPgSQLParser.PLPGSQL, 0); }
		public TerminalNode OR() { return getToken(PlPgSQLParser.OR, 0); }
		public TerminalNode REPLACE() { return getToken(PlPgSQLParser.REPLACE, 0); }
		public DeclareBlockContext declareBlock() {
			return getRuleContext(DeclareBlockContext.class,0);
		}
		public List<PlStatementContext> plStatement() {
			return getRuleContexts(PlStatementContext.class);
		}
		public PlStatementContext plStatement(int i) {
			return getRuleContext(PlStatementContext.class,i);
		}
		public CreateFunctionStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createFunctionStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlPgSQLListener ) ((PlPgSQLListener)listener).enterCreateFunctionStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlPgSQLListener ) ((PlPgSQLListener)listener).exitCreateFunctionStatement(this);
		}
	}

	public final CreateFunctionStatementContext createFunctionStatement() throws RecognitionException {
		CreateFunctionStatementContext _localctx = new CreateFunctionStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_createFunctionStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(CREATE);
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OR) {
				{
				setState(98);
				match(OR);
				setState(99);
				match(REPLACE);
				}
			}

			setState(102);
			match(FUNCTION);
			setState(103);
			schemaName();
			setState(104);
			match(DOT);
			setState(105);
			functionName();
			setState(106);
			match(LPAREN);
			setState(107);
			match(RPAREN);
			setState(108);
			match(RETURNS);
			setState(109);
			match(VOID);
			setState(110);
			match(AS);
			setState(111);
			match(DOLLAR);
			setState(112);
			match(DOLLAR);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DECLARE) {
				{
				setState(113);
				declareBlock();
				}
			}

			setState(116);
			match(BEGIN);
			setState(118); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(117);
				plStatement();
				}
				}
				setState(120); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 2251799818182656L) != 0) );
			setState(122);
			match(END);
			setState(123);
			match(SEMI);
			setState(124);
			match(DOLLAR);
			setState(125);
			match(DOLLAR);
			setState(126);
			match(LANGUAGE);
			setState(127);
			match(PLPGSQL);
			setState(128);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclareBlockContext extends ParserRuleContext {
		public TerminalNode DECLARE() { return getToken(PlPgSQLParser.DECLARE, 0); }
		public List<VariableDeclarationContext> variableDeclaration() {
			return getRuleContexts(VariableDeclarationContext.class);
		}
		public VariableDeclarationContext variableDeclaration(int i) {
			return getRuleContext(VariableDeclarationContext.class,i);
		}
		public DeclareBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declareBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlPgSQLListener ) ((PlPgSQLListener)listener).enterDeclareBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlPgSQLListener ) ((PlPgSQLListener)listener).exitDeclareBlock(this);
		}
	}

	public final DeclareBlockContext declareBlock() throws RecognitionException {
		DeclareBlockContext _localctx = new DeclareBlockContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_declareBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(DECLARE);
			setState(132); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(131);
				variableDeclaration();
				}
				}
				setState(134); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IDENTIFIER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableDeclarationContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(PlPgSQLParser.IDENTIFIER, 0); }
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(PlPgSQLParser.SEMI, 0); }
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlPgSQLListener ) ((PlPgSQLListener)listener).enterVariableDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlPgSQLListener ) ((PlPgSQLListener)listener).exitVariableDeclaration(this);
		}
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_variableDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(IDENTIFIER);
			setState(137);
			dataType();
			setState(138);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PlStatementContext extends ParserRuleContext {
		public ForLoopStatementContext forLoopStatement() {
			return getRuleContext(ForLoopStatementContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public InsertStatementContext insertStatement() {
			return getRuleContext(InsertStatementContext.class,0);
		}
		public SelectIntoStatementContext selectIntoStatement() {
			return getRuleContext(SelectIntoStatementContext.class,0);
		}
		public AssignmentStatementContext assignmentStatement() {
			return getRuleContext(AssignmentStatementContext.class,0);
		}
		public PlStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlPgSQLListener ) ((PlPgSQLListener)listener).enterPlStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlPgSQLListener ) ((PlPgSQLListener)listener).exitPlStatement(this);
		}
	}

	public final PlStatementContext plStatement() throws RecognitionException {
